Tweak to side panel so it completely disappears when it is collapsed and the leaflet controls stay in correct relative position.

--- a/web_src/css/sidebar.css
+++ b/web_src/css/sidebar.css
@@ -14,7 +14,7 @@
 }
 
 .sidebar.collapsed {
-  transform: translateX(-305px);
+  transform: translateX(-320px);
 }
 
 /* Left navigation column (always visible) */
@@ -149,7 +149,7 @@
   position: absolute;
 }
 .leaflet-anim-control-container.left-closed .leaflet-left {
-  left: 15px;
+  left: 0px;
   transition: left 0.3s ease;
   position: absolute;
 }
